# 60DaysOfLearning2025

./: README.md
Day1/: README.md  challenge.ipynb  solutions.ipynb
Day10/: README.md
Day10/2. First NN/: app_1_streamlit.py  test_addition.ipynb
Day11/: README.md
Day12/: README.md
Day13/: Readme.md
Day14/: README.md
Day2/: README.md
Day3/: AI_FELLOWSHIP_Student_Notebook_Pandas_Data_Wrangling.ipynb  AI_FELLOWSHIP_Student_Notebook_Pandas_Data_Wrangling_edited.ipynb  README.md  Solution_Pandas_Data_Wrangling.ipynb
Day4/: Dog_Breed_Prediction.ipynb  README.md
Day5/: README.md
Day5/AWS_AI_ML/: 4_1_Supervised_Learning.ipynb  4_2_Unsupervised_Learning.ipynb  4_3_Decision_Tree.ipynb  4_4_Neural_Network.ipynb
Day6/: README.md
Day6/src/multi_robot_coordination/launch/: target_detector.launch.py
Day6/src/multi_robot_coordination/msg/: CylinderDetection.msg  check_old.msg
Day6/src/multi_robot_coordination/multi_robot_coordination/: final_multi_yolo_detector.py  split_1.py
Day7/: Auto Gradients in Tensors  README.md  Tensor Arithematic Operations  Tensor Operations
Day8/: 01. Basic Neural Network (own writing code)  02_Basic_Neural_Network_(with_Built_in_functions;_Pytorch).ipynb  README.md
Day9/: README.md  map_coordinates.csv  mappp.pgm  mappp.yaml  test.py
Day9/src/multi_robot_coordination/: CMakeLists.txt  package.xml  setup.py
Day9/src/multi_robot_coordination/launch/: central_coordinator.launch.py
Day9/src/multi_robot_coordination/multi_robot_coordination/: final_closest_robot.py  final_multi_yolo_detector.py  spilit_2.py  split_1.py  world_coordinate_converter.py
Day9/src/turtlebot3_gazebo/: CMakeLists.txt
Day9/src/turtlebot3_gazebo/params/: error.txt  nav2_params.txt  nav2_params_0.yaml  nav2_tb3_0.yaml
Day9/src/turtlebot3_gazebo/params/infognu-coupon-generator/: background.js  error.txt  manifest.json  popup.html
Day9/src/turtlebot3_gazebo/params/infognu-coupon-generator/src/: chrome-extension-async.js  main.js
Day9/src/turtlebot3_multi_robot/: CMakeLists.txt  package.xml
Day9/src/turtlebot3_multi_robot/MAPs/: blank_map.pgm  blank_map.yaml
Day9/src/turtlebot3_multi_robot/MAPs (copy)/: Maze1.pgm  Maze1.yaml  maze_1.pgm  maze_1.yaml  small_maze.pgm  small_maze.yaml
Day9/src/turtlebot3_multi_robot/launch/: gazebo_multi_maze_nav2_world.launch.py
Day9/src/turtlebot3_multi_robot/models/turtlebot3_waffle/: model.sdf  model__.sdf
Day9/src/turtlebot3_multi_robot/models/turtlebot3_waffle_1/: model.sdf
Day9/src/turtlebot3_multi_robot/models/turtlebot3_waffle_2/: model.sdf
Day9/src/turtlebot3_multi_robot/models/turtlebot3_waffle_3/: model.sdf
Day9/src/turtlebot3_multi_robot/models/turtlebot3_waffle_4/: model.sdf
Day9/src/turtlebot3_multi_robot/models/turtlebot3_waffle_5/: model.sdf
Day9/src/turtlebot3_multi_robot/node/: camera_target_detector.py  frontier_based_exploration.py  grid_based_explorer.py  multi_robot_controller.py  obstacle_avoidance.py  random_walker.py
Day9/src/turtlebot3_multi_robot/worlds/: Maze1_robot_world_obstacles.world  Small_robot_world.world
