<?xml version="1.0"?>
<package format="3">
  <name>multi_robot_coordination</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="077bme014.biswash@pcampus.edu.np">biswash</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Group the package as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
